--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7"
   }
 }
